<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>costmap_ros2</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="chenmingjian@cvte.com">chenmingjian</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>costmap_mediator</build_depend>
    <build_depend>costmap_base</build_depend>
    <build_depend>costmap_builder</build_depend>
    <build_depend>costmap_layer</build_depend>
    <build_depend>data_manager</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pose2d</build_depend>
    <build_depend>lidar_perception_msgs</build_depend>
    <build_depend>public_parameters</build_depend>
    <!-- <build_depend>cvte_sensor_msgs</build_depend> -->
    <build_depend>std_msgs</build_depend>


    <exec_depend>rclcpp</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>costmap_mediator</exec_depend>
    <exec_depend>costmap_base</exec_depend>
    <exec_depend>costmap_builder</exec_depend>
    <exec_depend>costmap_layer</exec_depend>
    <exec_depend>data_manager</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>pose2d</exec_depend>
    <exec_depend>lidar_perception_msgs</exec_depend>
    <exec_depend>public_parameters</exec_depend>

    <!-- <exec_depend>cvte_sensor_msgs</exec_depend> -->
    <exec_depend>std_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
