<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>dynamic_obstacles_tracking</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="caoyong@cvte.com">wuhuabo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pose2d</build_depend>
  <build_depend>log</build_depend>
  <build_depend>lidar_perception_msgs</build_depend>


  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>pose2d</exec_depend>
  <exec_depend>log</exec_depend>
  <exec_depend>lidar_perception_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
