<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>navigation_ros2</name>
    <version>0.2.0</version>
    <description>TODO: Package description</description>
    <maintainer email="chenmingjian@cvte.com">chenmingjian</maintainer>
    <license>TODO: License declaration</license>

    <depend>yaml_cpp_vendor</depend>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>mission_manager_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>robot_trajectory</build_depend>
    <build_depend>robot_trajectory_msgs</build_depend>
    <build_depend>costmap_ros2</build_depend>
    <build_depend>logic_controller</build_depend>
    <build_depend>local_controller</build_depend>
    <build_depend>local_planner</build_depend>
    <build_depend>global_planner</build_depend>
    <build_depend>path_follower</build_depend>
    <build_depend>planner_utils</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>log</build_depend>
    <build_depend>speed_decision</build_depend>
    <build_depend>clean_decision</build_depend>
    <build_depend>pnc_map</build_depend>
    <build_depend>public_parameters</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>mission_manager_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>costmap_ros2</exec_depend>
    <exec_depend>robot_trajectory</exec_depend>
    <exec_depend>robot_trajectory_msgs</exec_depend>
    <exec_depend>logic_controller</exec_depend>
    <exec_depend>path_follower</exec_depend>
    <exec_depend>local_controller</exec_depend>
    <exec_depend>local_planner</exec_depend>
    <exec_depend>global_planner</exec_depend>
    <exec_depend>planner_utils</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>libpcl-all-dev</exec_depend>
    <exec_depend>log</exec_depend>
    <exec_depend>speed_decision</exec_depend>
    <exec_depend>clean_decision</exec_depend>
    <exec_depend>pnc_map</exec_depend> 
    <exec_depend>public_parameters</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
